Bug 219528 - tasks applet shuffles items without need when "app-is-loading" item is present and "sort by desktop" is enabled
Summary: tasks applet shuffles items without need when "app-is-loading" item is presen...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-21 10:51 UTC by Dmitry Suzdalev
Modified: 2010-03-30 14:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Suzdalev 2009-12-21 10:51:36 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Sorry for somewhat messy bug title, feel free to change it - i just don't know the right names for these things :)

Anyway, here are the steps to reproduce:

1. Go to Tasks Applet settings and set sorting mode to "By Desktop"
2. Open several windows on each desktop
3. Launch some task which takes time to launch and which causes "app-is-loading" item to appear in a task list [1]
4. Now try to click on different apps in task list to activate them.
5. Notice how the tasks in list get resorted each time you activate some app => this shouldn't happen because they don't change desktop and thus they shouldn't be reordered.

Note that this "reshuffling" on every click in task list happens only when this "app is loading" item presents in the task list. (well, and if sorting mode set to "by desktop")

I tried to make some screenshots on what happens but this turned out to be kinda difficult to catch up quickly :) I hope my description is good enough, if not, please tell me, i'll try to use another wording :)

[1] Here I just have a google-chrome app open and then launch another instance of it. Actually it doesn't open new instance, but opens a new tab, but this causes the "app-is-loading" item to appear in a task list and be there for a while

Version info:
KDE: trunk, Revision: 1064515
Qt: 4.6.0, kde-qt/master
Comment 1 Dmitry Suzdalev 2009-12-21 10:58:24 UTC
Forgot one detail - you need to configure Tasks applet to show apps from all desktops.
Comment 2 Dmitry Suzdalev 2010-03-30 14:29:23 UTC
SVN commit 1109042 by dimsuz:

Fix "sorting by desktop" strategy:
- Make it sort by task id instead of task's name => fixes items order changing on window title change
- Fix sorting when startup tasks are in the list (fixes bug 219528)

As a part of the fix, added AbstractGroupableItem::id() and AbstractGroupableItem::isStartupItem() methods.

BUG: 219528

REVIEW: http://reviewboard.kde.org/r/3375/


 M  +20 -3     abstractgroupableitem.cpp  
 M  +7 -0      abstractgroupableitem.h  
 M  +23 -3     strategies/desktopsortingstrategy.cpp  
 M  +5 -0      taskitem.cpp  
 M  +1 -0      taskitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1109042