Fix "sorting by desktop" strategy: - Make it sort by task id instead of task's name => fixes items order changing on window title change - Fix sorting when startup tasks are in the list (fixes bug 219528)

As a part of the fix, added AbstractGroupableItem::id() and AbstractGroupableItem::isStartupItem() methods.

BUG: 219528

REVIEW: http://reviewboard.kde.org/r/3375/

svn path=/trunk/KDE/kdebase/workspace/; revision=1109042